[package]
name = "diatermi"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["alejandro"]
description = "A library to interact with the high-level terminal that uses crossterm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
[dependencies]
crossterm = "0.27.0"
